--- a/zuriIT/responsive/style.css
+++ b/zuriIT/responsive/style.css
@@ -5,39 +5,104 @@
 }
 body{
     background-image: url(bg-intro-desktop.png);
+    background-position: center;
     height: 100vh;
     display: flex;
     align-items: center;
+    /* margin: auto; */
     justify-content: center;
     width: 100%;
 }
 main{
-    margin: 0 0 0 0;    
+    padding: 50px;    
     display: flex;
     flex-direction: row;
-    width: 50%;
-    background-color: hsl(0, 100%, 74%);
-    opacity: 0.85;
+    width: 65%;
+    background-color: hsl(0, 100%, 64%);
+    opacity: 0.6;
 }
 .side{
     color: white;
-    width: 50%;
-    padding: 30px;
+    width: 45%;
+    margin: auto;
+    padding: 20px;
 }
 .form{
     background-color: white;
     padding: 20px;
-    box-shadow: 05px 05px 10px;
+    width: 100%;
+    margin-left: 10px;
+    box-shadow: 0px 05px 10px;
     border-radius: 5px;
 }
 input{
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
 }
 button{
     width: 100%;
+    padding: 10px;
+    color: white;
+    border: none;
+    border-radius: 3px;
 }
-.other-side button{
-    background-color: ;
+.other-side .button{
+    margin-bottom: 15px;
+    margin-left: 10px;
+    background-color: hsl(248, 32%, 49%);
+}
+.button span{
+    font-weight: bold;
+}
+.other-side .but{
+    font-weight: bold;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  background-color: hsl(154, 59%, 51%);  
+}
+.term{
+    margin: 5px;
+    color: rgb(39, 38, 38);
+}
+.term p{
+    font-size: small;
+}
+.term span{
+    color: hsl(0, 100%, 64%);
+    font-weight: bold;
+}
+
+@media ( max-width:600px) {
+    body{
+        height: 100vh;
+    }
+    main{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+    .side{
+        width: 100%;
+    }
+    .other-side .button{
+        padding: 30px;
+        font-size: 20px;
+    }
+    .form{
+        border-radius: 10px;
+        padding: 20px;
+    }
+    input{
+        padding: 20px;
+    }
+    .other-side .but{
+        padding: 20px;
+    }
+    .term p{
+        font-size: large;
+    }
 }
