--- a/zuriIT/syle.css
+++ b/zuriIT/syle.css
@@ -3,13 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* @media  (min-width:826px){ */
+
 body{
     background-color: rgb(3, 3, 20);
     max-width: 50%;
-    margin: auto;    
+    margin: auto;
+    height: 100vh;    
 }
 main{ 
-   height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,27 +38,77 @@ main{
 #bottom-content{
     display: flex;
     width: 100%;
-    height: 30%;
+    height: 25%;
 }
 #left-side{
     width: 40%;
-    margin: 5px 5px 5px 5px;
+    margin: 5px;
+    /* margin: 5px 5px 5px 5px; */
     background-color: green;
     height: 100%;
 }
 #right-side{
     width: 60%;
     margin: 5px;
-    height: 100%;
+    height: 97%;
 }
 #up-right-side{
-    margin-bottom: 2%;
+    margin-bottom: 3%;
     width: 100%;
-    height: 48.0%;
+    height: 50.0%;
     background-color: rgb(0, 183, 255);
 }
 #down-right-side{
-    height: 48.0%;
+    height: 50.0%;
     width: 100%;
     background-color: rgb(0, 183, 255);
 }
+
+
+
+ @media  (max-width:825px){
+    main{
+        height: 50%;
+  
+    }
+
+  /*  main{
+         width: 100%;
+        height: 100vh;
+       
+    }
+    main div{
+        display: grid;
+        grid-template-areas:'a a b'
+        'c d d'
+        'c e e' ;
+    }
+    #top-content{
+        grid-area: a;
+    }
+    #top-right-content{
+        grid-area: a;
+    }
+    #top-left-content{
+        grid-area: b;
+    }
+    #bottom-content{
+        height: 25%;
+    }
+    #left-side{
+        grid-area: c;
+    }
+    #up-right-side{
+        grid-area: d;
+        width: 100%;
+        background-color: rgb(0, 183, 255);
+    
+    }
+    #right-side{
+        width: 60%;
+        height: 100%;
+    }
+    #down-right-side{
+        grid-area: e;
+    }*/
+} 
