commit new psd design

--- a/new_psd_design/style.css
+++ b/new_psd_design/style.css
@@ -373,8 +373,9 @@ label {
 @media screen and (max-width: 600px) {
   body {
     display: flex;
-    flex-direction: column;
+    width: 100vw;
     align-items: center;
+    flex-direction: column;
   }
   .home {
     display: flex;
